[project]
name = "CleanDiffuser"
dynamic = ["version"]
description = "CleanDiffuser: An Easy-to-use Modularized Library for Diffusion Models in Decision Making"
authors = [{ name = "CleanDiffuserTeam" }]
readme = "README.md"
requires-python = ">= 3.8"
keywords = ["reinforcement learning", "pytorch", "diffusion models"]
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "einops",
    "zarr>=2.16.1",
    "av>=12.2.0",
    "dill>=0.3.8",
    "mujoco_py>=2.0",
    "gym>=0.13",
    "dm_control>=1.0.3",
    "cython",
    "numba",
    "matplotlib",
    "six",
    "hydra-core",
    "zarr",
    "wandb",
    "dill",
    "av",
    "pygame",
    "pymunk",
    "shapely",
    "scikit-image",
    "opencv-python",
    "imagecodecs",
    "torch>1.0.0",
    "torchvision",]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://cleandiffuserteam.github.io/CleanDiffuserDocs/"
Repository = "https://github.com/CleanDiffuserTeam/CleanDiffuser"

[build-system]
requires = ["setuptools>=61.0.0", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.rye]
managed = true
dev-dependencies = [
    "setuptools>=69.5.1",
    "setuptools_scm>=8.1.0",
    "wheel>=0.43.0",
]

[tool.setuptools_scm]
write_to = "cleandiffuser/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.setuptools.packages.find]
include = ["cleandiffuser"]
